--- a/css/search_product.css
+++ b/css/search_product.css
@@ -1,5 +1,20 @@
-body {
-    font: small 'Lucida Grande', Verdana, Arial, sans-serif;
+.center {
+ margin-left: auto;
+ margin-right: auto;
+}
+
+body { 
+    background-color: #a5c0b2 ;
+    font-family: 'Didact Gothic';font-size: 22px;
+    margin: 10px;
+    text-align: center;
+
+}
+
+h1{
+    font-size: 160%;
+    font-weight: bold;
+
 }
 
 h2 {
@@ -15,13 +30,16 @@ section#results {
 table {
     border-collapse: collapse;
     margin-bottom: 50px;
+
 }
 
 table thead td {
     font-weight: bold;
+    border: 2px solid rgb(200,200,200);
 }
 
 table td {
-    border: 1px solid rgb(200,200,200);
-    padding: 2px 10px;
+    /*border: 2px solid rgb(200,200,200); */
+    padding: 10px 50px;
 }
+
